Add ClassScanFactory